# keevor-mysql-mcp-server

./: .gitignore  README.md  pyproject.toml
src/keevor_mysql_mcp_server/: __init__.py
