[project]
name = "keevor-mysql-mcp-server"
version = "1.0.0"
description = "MCP server for MySQL database operations"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "keevor" }]
keywords = ["mcp", "mysql", "database", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.22.0",
    "pymysql>=1.1.2",
]

[project.scripts]
keevor-mysql-mcp-server = "keevor_mysql_mcp_server:main"

[project.urls]
Homepage = "https://github.com/KeeVor/keevor-mysql-mcp-server"
Repository = "https://github.com/KeeVor/keevor-mysql-mcp-server"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/keevor_mysql_mcp_server"]
